fixed layout issues on index.pug

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -24,7 +24,7 @@ body {
 }
 
 .footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     white-space: nowrap;
@@ -56,7 +56,9 @@ body {
         margin-right: 730px;
     }
 
-    
+    #videos {
+        margin: auto;
+    }
 
     #view1 {
         margin-left: 10px;
